--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ swap" rel="stylesheet
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
         <h1 class="container__titulo">
-          <b class="container__titulo--negrito"Alura/b>Books
+          <b class="container__titulo--negrito"Alura/b> Books2
         </h1>
       </div>
       <div class="container">
