--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ swap" rel="stylesheet">
           <a href="#" class="lista-menu__link">DESIGN & UX</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo do alura" class="container__imagem">
+      <img src="img/Logo.svg" alt="Logo do alura" class="container__titulo">
       <h1 class="container__titulo">
         <b class="container__titulo--negrito">Alura</b>Books
       </h1>
