--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@ swap" rel="stylesheet">
           <li class="opcoes__item"><a href class="opcoes__link">Minha Estante </a></li>
         </ul>
         <div class="container"></a>
-          <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
-              class="cabecalho__imagem container__imagem-transparente"></a>
-          <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem "></a>
-          <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
+          <a href="#">
+            <img src="img/Favoritos.svg" alt="Meus favoritos"
+              class="cabecalho__imagem container__imagem-transparente">
+          </a>
+          <a href="#">
+            <img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem ">
+          </a>
+          <a href="#">
+            <img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem">
+          </a>
         </div>
   </header>
   <section class="banner">
