--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ swap" rel="stylesheet">
           <a href="#" class="lista-menu__link">DESIGN & UX</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo do alura" class="container__imagem">
+      <img src="img/Logo.svg" alt="Logo do alura" class="continer__imagem">
       <h1 class="container__titulo">
         <b class="container__titulo--negrito">Alura</b>Books
       </h1>
@@ -70,15 +70,18 @@ swap" rel="stylesheet">
           <li>
           <li class="opcoes__item"><a href class="opcoes__link">Minha Estante </a></li>
         </ul>
-        <div class="container"></a>
-          <a href="#">
-            <img src="img/Favoritos.svg" alt="Meus favoritos"
+        <div class="container">
+        <a href="#">
+          <img src="img/Favoritos.svg" alt="Meus favoritos"
               class="cabecalho__imagem container__imagem-transparente">
-          </a>
-          <a href="#">
+        </a>
+        <a href="#" class="container__link"> 
             <img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem ">
-          </a>
-          <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem">
+            <p class="container__texto">Minhas Compras</p>
+        </a>
+          <a href="#" class="container__link">
+            <img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem">
+            <p class="container__texto">Meu Perfil</p>
           </a>
         </div>
   </header>
