--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@ swap" rel="stylesheet">
           <li class="opcoes__item"><a href class="opcoes__link">Minha Estante </a></li>
         </ul>
         <div class="container">
-        <a href="#">
-          <img src="img/Favoritos.svg" alt="Meus favoritos"
-              class="cabecalho__imagem container__imagem-transparente">
-        </a>
-        <a href="#" class="container__link"> 
+          <a href="#">
+            <img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem container__imagem-transparente">
+          </a>
+          <a href="#" class="container__link">
             <img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem ">
             <p class="container__texto">Minhas Compras</p>
-        </a>
+          </a>
           <a href="#" class="container__link">
             <img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem">
             <p class="container__texto">Meu Perfil</p>
